[package]
name = "pier"
version = "0.1.0"
authors = ["Benjamin Scholtz <bscholtz.bds@gmail.com>"]
edition = "2018"

[dependencies]
shellexpand = "1.0"
clap = {version = "~2.27.0", features = ["yaml"]}
toml = "0.4"
serde = { version = '1.0.83', features = ['derive'] }
shell = { git = "https://github.com/google/rust-shell" }
prettytable-rs = "^0.8"
snafu = "0.5.0"

assert_cmd = "0.11.1"
tempfile = "3.1.0"
assert_fs = "0.11"
predicates = "1.0"

[dev-dependencies]
serde = { version = '1.0.83', features = ['derive'] }

[dependencies.command-macros]
version = "0.2.7"
features = ["nightly"]
